# short

./: README.md  short.cabal  todo.txt
src/: Main.hs
src/Short/: Pages.hs  State.hs
src/Short/Storage/: InMemory.hs
