name:                short
version:             0.1.0.0
synopsis:            URL shortener
homepage:            github.com/j-rock/short
license:             MIT
license-file:        licenses/LICENSE.site
author:              Joseph Rock
maintainer:          josephwrock@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable short
  main-is:             Main.hs
  hs-source-dirs:      src/
  build-depends:       base >=4.8 && <4.9,
                       mtl,
                       transformers >=0.4 && <0.5,
                       containers,
                       monad-loops,
                       text,
                       MonadRandom,
                       stm >= 2.4 && <2.5,
                       scotty,
                       wai-middleware-static,
                       wai-extra,
                       blaze-html
  default-language:    Haskell2010
